--- a/Gudang/gudangDefault.css
+++ b/Gudang/gudangDefault.css
@@ -1,5 +1,5 @@
 html {  /*untuk setting background dan font keseluruhan page*/
-    background: url('../../background.jpg') no-repeat center center fixed; /*setting background, src diperhatikan! diganti sesuai kebutuhan*/
+    background: url('../background.jpg') no-repeat center center fixed; /*setting background, src diperhatikan! diganti sesuai kebutuhan*/
     -webkit-background-size: cover; /*setting background*/
     -moz-background-size: cover;    /*setting background*/
     -o-background-size: cover;     /*setting background*/
@@ -23,7 +23,7 @@ body{ /*supaya mentok selayar*/
 
 /*------------------------bagian header---------------------*/
 header{ /*bagian atas yang isinya logo, tulisan welcome, logout dan tanggal*/
-    background-color: rgba(0,0,255,0.3);
+    background-color:  rgba(0,0,51,0.23);
     height:20%;
     width: 100%;
 }
