--- a/Gudang/Gudang - Tambah Komik/gudang - tambah komik.css
+++ b/Gudang/Gudang - Tambah Komik/gudang - tambah komik.css
@@ -1,50 +1,5 @@
 /*------------------------bagian input---------------------*/
-article div#konten div#kiri{ /*yng sbelah kiri, dari id member smp tanggal lahir*/
-    float: left;
-    margin-top: 35px;
-    margin-left: 100px;
-}
-article div#konten div#kanan{ /*yg kanan, dari email smp alamat*/
-    float: left;
-    margin-top: 35px;
-    margin-left: 250px;
-}
-article div#konten label{   /*semua label taruh diatas inputan*/
-    font-size: 12px;
-    margin-left: 5px;
-}
-article div#konten input, article div#konten select{   /*kotak yang utk input*/
-    margin-bottom: 8px;
-    font-size: 12px;
-    padding: 8px;
-    width: 250px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    border-radius: 3px;
-}
-article div#konten textarea#sinopsis{
-    height: 200px;
-}
-article div#konten select{
-    width: 270px;
-}
-article div#konten input[type=text]:focus { /*warna background berubah ketika focus*/
-    background-color: cornflowerblue;
-}
-article div#konten input#tombol{
-    clear: both;
-    float: right;
-    margin-right: 20px;
-    margin-top: 15px;
-    padding: 5px;
-    width: 100px;
-    font-size: 15px;
-    border: 1px solid black;
-    color: black;
-    background-color: darkgray;
-    border-radius: 5px;
-}
-article div#konten input#tombol:hover{
-    background-color: gray;
+article div#konten{ /*konten (sebelahnya aside)*/
+    overflow-y: scroll;
 }
 /*------------------------bagian input---------------------*/
