--- a/User/User - Daftar Komik/userdaftarkomik.css
+++ b/User/User - Daftar Komik/userdaftarkomik.css
@@ -1,52 +1,3 @@
-html {  /*untuk setting background dan font keseluruhan page*/
-    background: url('../../background.jpg') no-repeat center center fixed; /*setting background*/
-    -webkit-background-size: cover; /*setting background*/
-    -moz-background-size: cover;    /*setting background*/
-    -o-background-size: cover;     /*setting background*/
-    background-size: cover;        /*setting background*/
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    height: 100%;
-    width: 100%;
-}
-body{ /*supaya mentok selayar*/
-    margin: 0px;
-    padding: 0px;
-    height: 100%;
-    width: 100%;
-}
-.blue{ /*utk font-font yg warnanya biru*/
-    color: #000066;
-}
-.font15{ /*utk font yang ukurannya 15px*/
-    font-size: 15px;
-}
-
-/*------------------------bagian header---------------------*/
-header{ /*bagian atas yang isinya logo, tulisan welcome, logout dan tanggal*/
-    background-color: rgba(0,0,51,0.23);
-    height:20%;
-    width: 100%;
-}
-header #logo{  /*penempatan gambar logo tepoz di kiri atas*/
-    margin-top: 0%;
-    padding-top: 0%;
-    height:90px;
-    top: 0.2%;
-    max-width:40%;
-}
-header p#welcome{   /*tulisan welcome smpai logout di pojok kanan atas*/
-    float: right;   /*penempatan ke pojok kanan */
-    margin-right: 1%;
-}
-header #logOut{  /*utk logout (di pojok kanan atas)*/
-    font-weight: bold;
-}
-header p#tanggal{   /*penampil tanggal di kanan atas*/
-    clear: both;    /*utk pindah baris dari tulisan welcome*/
-    float: right;   /*letakkan di kanan*/
-    font-style: italic;
-    margin-right: 1%; /*supaya ada jarak sedikit dengan pojok*/
-}
 
 /*------------------------bagian artikel---------------------*/
 article{ /*article adlah semua yang ada dibawah header*/
@@ -66,9 +17,6 @@ article div#judul #sorting{ /*"sort by" (label dan dropbox-nya)*/
 article div#judul #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
     margin-left: 15px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
     width: 100px;   /*lebar dropbox*/
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
     float: right;   /*letakkan di kanan, sebelahan dg sort by*/
@@ -80,17 +28,11 @@ article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
 }
 article div#judul #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
     width: 150px;
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
     width: 100px;
     margin-left: 3px;   /*memberi jarak ke kanan dengan label yg diatasnya*/
     margin-right: 10px; /*memberi jarak dengan box inputan*/
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 
 /*------------------------bagian isi (daftar komiknya)---------------------*/
@@ -144,37 +86,10 @@ article #daftarKomik .infoKomik .new{ /*tambahan img icon "new" utk komik2 baru*
     width: 30px;
 }
 
-/*----------tombol utk up ke atas----------*/
-a#tombolUp{ /*peletakkannya dikanan bawah dan fixed*/
-    position: fixed; /*tetap ada di bawah walau discroll*/
-    bottom: 2px;     /*jarak dengan bottom window*/
-    right: 2px;      /*jarak dg kanan window*/
-    padding: 5px;
-    font-size: 30px; /*besar tombol*/
-    opacity: 0.3; /*transparancy*/
-    display: none; /*tidak ditampilkan (ditampilkan saat scrolldown dan di media query utk HP, setting di file .js)*/
-}
-a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
-    opacity: 0.6;
-}
-
-
 
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
-    /*-----------------header-----------------*/
-    header{ /*header height nya ditambahi, semua element di ketengahi*/
-        height: 180px;
-        text-align: center;
-    }
-    header #logo{ /*logo tepoz supaya bisa ikut ketengah*/
-        float: none;
-    }
-    header p#welcome, header p#tanggal{ /*hilangi floatnya, supaya ikut ketengah*/
-        float: none;
-    }
-
     /*-----------------utk article-----------------*/
     article{ /*semua element di article di ketengahi*/
         text-align: center;   
@@ -189,6 +104,7 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
     }
     article div#judul #searching #searchBox{
         float: none;
+        margin-top: 15px;
     }
     article div#judul #searching #searchBox::before { /*menambahkan new line sebelum id="searchBox"*/
         content: "\A";  /*tambahkan newline, spti <br>*/
