--- a/kasir/KasirDefault.css
+++ b/kasir/KasirDefault.css
@@ -102,8 +102,9 @@ article div#konten h1{  /*judul*/
     float: right;
 }
 
-article div#konten input.disable{
-    background-color: grey;
+.disable{
+    background-color: grey !important;
+    color: white !important;
 }
 
 .tebal{
