--- a/kasir/Kasir - daftar komik/cssKasirDaftarKomik.css
+++ b/kasir/Kasir - daftar komik/cssKasirDaftarKomik.css
@@ -1,3 +1,151 @@
-h1{
-    color: red;
+
+/*------------------------bagian artikel---------------------*/
+article{ /*article adlah semua yang ada dibawah header*/
+    height: 80%;
+    width: 100%;
+}
+/*------------------------bagian judul dan searching + sorting ---------------------*/
+article div#judul h1{  /*judul "Daftar Komik"*/
+    text-align: center; /*taruh tengah*/
+    font-size: 35px;
+    text-transform:uppercase;   /*supaya capslock*/
+}
+article div#judul #sorting{ /*"sort by" (label dan dropbox-nya)*/
+    float: right;   /*taruh pojok kanan*/
+    margin-right: 1%;   /*beri jarak dengan pojok*/
+}
+article div#judul #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
+    margin-left: 15px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
+    width: 100px;   /*lebar dropbox*/
+}
+article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
+    float: right;   /*letakkan di kanan, sebelahan dg sort by*/
+    width: 300px;
+    margin-right: 2%; /*jarak dgn sort by*/
+}
+article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
+    float: right;   /*lettakkan di kanan parent #searching*/
+}
+article div#judul #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
+    width: 150px;
+}
+article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
+    width: 100px;
+    margin-left: 3px;   /*memberi jarak ke kanan dengan label yg diatasnya*/
+    margin-right: 10px; /*memberi jarak dengan box inputan*/
+}
+
+/*------------------------bagian isi (daftar komiknya)---------------------*/
+article div#daftarKomik{ /*sekotak daftar komik*/
+    margin: auto;   /*ditaruh tengah*/
+    margin-top: 90px;
+    height: 360px;
+    width: 95%;
+    overflow-y: scroll;  /*apabila lebih overflow secara vertical, di scroll*/
+}
+article #daftarKomik .infoKomik{ /*kotak masing2 komik yang isinya info komik*/
+    background-color: #F2F2F2;
+    margin: 14px;
+    height: 300px;
+    width: 170px;
+    float: left; /*di taruh kiri, supaya bersebelahan dengan gambar2 lainnya*/
+}
+article #daftarKomik .infoKomik.favorit{ /*utk komik2 yang favorit*/
+    border: 4px solid red; /*favorit ditandai dg bordernya yg merah*/
+    height: 292px;  /*height jadi lebih sedikit 8px dari pada yang tidak favorit (supaya besar kotak sama)*/
+    width: 162px;   /*witdh juga jadi lebih sedikit 8px*/
+    padding: 0px;
+}
+article #daftarKomik .infoKomik.specialEdition{ /*utk komik2 yang special edition*/
+    outline: 4px solid gold; /*special edition ditambahi outline gold*/
+}
+article #daftarKomik .infoKomik .komik{ /*utk fotonya*/
+    height: 200px;
+    width: inherit; /*selebar kotak putih*/
+}
+article #daftarKomik .infoKomik h4{ /*judul komiknya*/
+    margin: 4px;
+    text-align: center; /*tengah kotak*/
+    overflow: hidden;   /*overflow tidak ditampilkan*/
+    text-overflow: ellipsis;    /*kalau text panjang, akhhirnya diberi ...*/
+    white-space: nowrap;    /*tidak ada newline*/
+}
+article #daftarKomik .infoKomik p{ /*info komiknya (stok, tersedia, available)*/
+    margin: 1px; /*jarak 1px dg kotaknya*/
+}
+article #daftarKomik .infoKomik p.tersedia{ /*tersedia berapa*/
+    float: left; /*supaya bisa sebaris dg tulisan available*/
+}
+article #daftarKomik .infoKomik p.status{ /*available atau tidak*/
+    float: right; /*dikanannya tulisan tersedia*/
+    color: green; /*available hijau, unavail red*/
+}
+article #daftarKomik .infoKomik .new{ /*tambahan img icon "new" utk komik2 baru*/
+    clear: both;    /*pindah baris dari tulisan available*/
+    float: right;   /*bagian kanan kotak*/
+    width: 30px;
+}
+
+
+
+/*---------------------------media query---------------------------*/
+@media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    /*-----------------utk article-----------------*/
+    article{ /*semua element di article di ketengahi*/
+        text-align: center;   
+    }
+
+    /*--------utk article (bagian judul)---------*/
+    article div#judul #sorting, article div#judul #searching{ /*media search dan sort diketengahi*/
+        margin: auto;
+        text-align: center;
+        float: none;    /*hilangi float*/
+        
+    }
+    article div#judul #searching #searchBox{
+        float: none;
+        margin-top: 15px;
+    }
+    article div#judul #searching #searchBox::before { /*menambahkan new line sebelum id="searchBox"*/
+        content: "\A";  /*tambahkan newline, spti <br>*/
+    }
+    article div#judul #searching #selectSearchBy, article div#judul #sorting #selectSortBy{
+        margin: auto;
+    }
+
+    /*--------utk article (bagian daftar komik)---------*/
+    article div#daftarKomik{ /*sekotak daftar komik*/
+        margin-top: 10px;
+        overflow-y: inherit;
+    }
+    article #daftarKomik .infoKomik{ /*ukuran kotak putih dikecilin*/
+        height: 160px;
+        width: 80px;
+        margin: 10px 4px;
+    }
+    article #daftarKomik .infoKomik.favorit{ /*ukuran kotak putih yang favorit juga dikecilin*/
+        height: 152px;
+        width: 77px;
+    }
+    article #daftarKomik .infoKomik .komik{ /*ukuran gambar komik dikecilin*/
+        height: 100px;
+    }
+    article #daftarKomik .infoKomik .stok, article #daftarKomik .infoKomik .tersedia{ /*utk menghemat ruang, info stok & tersedia tidak ditampilkan (dihidden)*/
+        position: absolute; /*fungsinya supaya tulisan availble naik kebawah judul komik*/
+        visibility: hidden;
+    }
+    article #daftarKomik .infoKomik h4{ /*judul komik dikecilkan*/
+        font-size: 10px;
+    }
+    article #daftarKomik .infoKomik .status{ /*tulisan available dikecilkan dan diketengahkan manual*/
+        margin-right: 17px;
+        clear: both;
+        font-size: 9px;
+    }   
+    article #daftarKomik .infoKomik .new{ /*icon new dikecilkan dan dinaikkan sedikit*/
+        width: 20px;
+        margin-top: -5px;
+    }
+
+    
 }
