--- a/Gudang/gudangDefault.css
+++ b/Gudang/gudangDefault.css
@@ -95,9 +95,6 @@ article div#judul #sorting{ /*"sort by" (label dan dropbox-nya)*/
 article div#judul #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
     margin-left: 15px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
     width: 100px;   /*lebar dropbox*/
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 article div#judul #searching{ /*"search by" (label, dropbox, input, dan icon-nya)*/
     float: right;   /*letakkan di kanan, sebelahan dg sort by*/
@@ -109,17 +106,11 @@ article div#judul #searching #searchBox{ /*"search by" (input, dan icon-nya)*/
 }
 article div#judul #searching #searchBox #inputSearchBy{ /*"search by" (input-nya)*/
     width: 150px;
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 article div#judul #searching #selectSearchBy{ /*"search by" (dropbox-nya)*/
     width: 100px;
     margin-left: 3px;   /*memberi jarak ke kanan dengan label yg diatasnya*/
     margin-right: 10px; /*memberi jarak dengan box inputan*/
-    background-color: rgba(255,255,255,0.54);
-    border: 0.05vw solid lightslategray;
-    border-radius: 20px;
 }
 
 /*------------------------bagian isi (daftar nya)---------------------*/
@@ -135,7 +126,9 @@ article #daftar .info{ /*kotak masing2  yang isinya info */
     height: 300px;
     width: 170px;
     float: left; /*di taruh kiri, supaya bersebelahan dengan gambar2 lainnya*/
+    position: relative;
 }
+
 article #daftar .info.favorit{ /*utk 2 yang favorit*/
     border: 4px solid red; /*favorit ditandai dg bordernya yg merah*/
     height: 292px;  /*height jadi lebih sedikit 8px dari pada yang tidak favorit (supaya besar kotak sama)*/
@@ -145,10 +138,44 @@ article #daftar .info.favorit{ /*utk 2 yang favorit*/
 article #daftar .info.specialEdition{ /*utk 2 yang special edition*/
     outline: 4px solid gold; /*special edition ditambahi outline gold*/
 }
+
+/*------------------------bagian keluar tombol edit---------------------*/
 article #daftar .info .foto{ /*utk fotonya*/
     height: 200px;
     width: inherit; /*selebar kotak putih*/
+    opacity: 1;
+    display: block;
+    transition: .25s ease;
+    backface-visibility: hidden;
 }
+
+article #daftar .info #edit{ /*tombol edit*/
+    transition: .25s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+article #daftar .info:hover .foto{ /*agar foto opacity berkurang saat di hover*/
+    opacity: 0.3;
+}
+
+article #daftar .info:hover #edit{ /*agar tombol edit muncul*/
+    opacity: 1;
+}
+article #daftar .info #edit .text{ /*font pada tombol edit*/
+    background-color: rgba(51,153,204,1);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+/*------------------------bagian keluar tombol edit---------------------*/
+
 article #daftar .info h4{ /*judul nya*/
     margin: 4px;
     text-align: center; /*tengah kotak*/
@@ -211,6 +238,7 @@ article div#konten input, article div#konten select, article div#konten textarea
 }
 article div#konten textarea{
     height: 134px;
+    resize: none;
 }
 article div#konten select{
     width: 270px;
