--- a/kasir/Kasir - daftar member/cssKasirDaftarMember.css
+++ b/kasir/Kasir - daftar member/cssKasirDaftarMember.css
@@ -27,25 +27,25 @@ article div#konten div#tabel{ /*div pembungkus tabel*/
     margin-top: 100px;
     clear: both;
 }
-table{  /*tabelnya*/
+div#tabel table{  /*tabelnya*/
     font-size: 13px;
     width: 80%;
     margin: auto;
     border-collapse: collapse;
 }
-th{ /*tabel baris paling atas*/
+div#tabel table th{ /*tabel baris paling atas*/
     background-color: grey;
     color: white;
 }
-th,td{ /*semua data didalam tabel*/
+div#tabel table th, div#tabel table td{ /*semua data didalam tabel*/
     text-align: center;
     border: 2px solid black; 
 }
-th,tr,td{
+div#tabel table th, div#tabel table tr, div#tabel table td{
     padding: 5px;
     height: 20px;
 }
-td{
+div#tabel table td{
     max-width: 0;
     overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
     text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
@@ -63,10 +63,13 @@ td{
 .email{
     width: 21%;
 }
+.noIdentitas, .gender{
+    display: none
+}
 /*tabel daftar peminjaman------*/
 
 /*pop up message*/
-div#blur{
+div#blur{       /*utk blur semuanya*/
     position: fixed;
     top: 0px;
     left: 0px;
@@ -75,22 +78,55 @@ div#blur{
     background-color: rgba(255, 255, 255, 0.4);
     display: none;
 }
-div#popup{
+div#popup{  /*kotak popup*/
     position: fixed;
     top: 5%;
     height: 90%;
     width: 70%;
-    background-color: rgba(255, 255, 255, 1);
+    background-color:rgba(50,50,50,0.9);
+    color: white;
     display: none;
 }
+div#popup .simbolX{ /*simbol x untuk close popup*/
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    color: white;
+    font-size: 30px;
+}
+div#popup table{    /*tabel di popup*/
+    clear: both;
+    margin: auto;
+    margin-top: 145px;
+    width: 70%;
+    table-layout: fixed;
+}
+div#popup td{   /*semua kolom*/
+    border: transparent;
+    padding: 10px;
+}
+div#popup .simbolPopup{ /*font awesome di popup*/
+    font-size: 40px;
+    width: auto;
+}
+div#popup .atribut{ /*nama:, id: ,gender: , dll*/
+    width: 20%;
+}
+div#popup .value{   /*valuenya (no,nama,email)*/
+    width: 45%;
+    overflow: hidden;   /*jika data melebihi batas tabel, di hidden*/
+    text-overflow: ellipsis; /*supaya teks panjang berubah jadi ...*/
+    white-space: nowrap; /*supaya tidak di-newline*/
+}
+
 /*pop up message*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
     /*keperluan searching -------*/
-    article div#konten #searching{ /*media search diketengahi*/
+    article div#konten #searching{
         margin: auto;
-        float: left;;    /*hilangi float*/
+        float: left; 
         margin: 0px;
         width: 95%;
     }
@@ -112,7 +148,7 @@ div#popup{
     article div#konten div#tabel{ /*div pembungkus tabel*/
         overflow-y: unset;  /*tidak ada scroll lagi*/
         margin-top: 120px;
-        width: auto;
+        width: 100%;
         height: auto;
     }
     table{
@@ -121,11 +157,30 @@ div#popup{
     }
     /*tabel------*/
     /*pop up message*/
-    div#popup{
-        top: 10%;
-        height: 80%;
-        left: 15%;
-        width: 70%;
+    div#popup{  
+        margin: auto;
+        top: 20%;
+        height: 60%;
+        left: 5%;
+        width: 90%;
+    }
+    div#popup .simbolX{     /*X utk close popup*/
+        font-size: 20px;
+    }
+    div#popup table{    /*tabel dalam popup*/
+        font-size: 13px;
+        margin-top: 45px;
+        width: 100%;
+        margin-right: 50px;
+    }
+    div#popup table .simbolPopup{   /*fontawesome ditiadakan*/
+        display: none;
+    }
+    div#popup .atribut{
+        width: 20%;
+    }
+    div#popup .value{
+        width: 80%;
     }
     /*pop up message*/
     /*-----------------utk konten-----------------*/
