--- a/User/UserDefault.css
+++ b/User/UserDefault.css
@@ -13,6 +13,7 @@ body{ /*supaya mentok selayar*/
     padding: 0px;
     height: 100%;
     width: 100%;
+    position: fixed;
 }
 .blue{ /*utk font-font yg warnanya biru*/
     color: #000066;
@@ -82,6 +83,9 @@ a#tombolUp:hover{ /*kalau dihover warnanya lebih jelas*/
 
 /*---------------------------media query---------------------------*/
 @media screen and (max-width: 680px){ /*view port kecil, utk HP*/
+    body{
+        position: unset;
+    }
     /*-----------------header-----------------*/
     header{ /*header height nya ditambahi, semua element di ketengahi*/
         height: 180px;
