--- a/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.css
+++ b/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.css
@@ -1,4 +1,3 @@
-
 /*------------------------bagian konten---------------------*/
 
 /*keperluan sort------*/
@@ -7,9 +6,10 @@ article div#konten #sorting{ /*"sort by" (label dan dropbox-nya)*/
     margin-right: 1%;   /*beri jarak dengan pojok*/
 }
 article div#konten #sorting #selectSortBy{ /*"sort by" (dropbox-nya)*/
-    margin-left: 15px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
+    margin-left: 10px;  /*supaya letak dropbox agak ke kanan dibanding labelnya*/
     width: 120px;   /*lebar dropbox*/
     border-radius: 5px;
+    margin-right: 12%;
 }
 /*keperluan sort------*/
 
