--- a/User/User - Daftar Komik/userdaftarkomik.css
+++ b/User/User - Daftar Komik/userdaftarkomik.css
@@ -125,6 +125,14 @@ div#popup p#popupJudul{ /*judul*/
     font-size: 30px;
     text-align: center;
 }
+div#popup div#divImg{
+    float: left;
+    margin-left: 75px;
+    margin-right: 20px;
+}
+div#popup img{
+    width: 200px;
+}
 div#popup div#istimewa{     /*popular & special edition*/
     font-size: 20px;
     font-family: cursive;
@@ -138,9 +146,10 @@ div#popup div#penting{  /*status, harga, lama sewa*/
     color: black;
     font-weight: bold;
     float: right;
-    margin-right: 35px;
+    margin-right: 50px;
 }
 div#popup table{
+    clear: both;
     margin-left: 70px;
     width: 55%;
     table-layout: fixed;
@@ -154,6 +163,11 @@ div#popup table td{
 }
 div#popup table td,div#popup p{
     font-size: 17px;
+}
+div#popup div#divSinopsis{
+    margin-left: 75px;
+    margin-right: 50px;
+    text-align: justify;
 }
 /*pop up message*/
 
